--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,9 +11,11 @@
     
         <div id="calculator">
             <div id="result">
-                <div id="result-answer">
-                    
-                </div>
+                <div id="result-answer"></div>
+            </div>
+            <div class="mode">
+                <button id="clearButton" class="mode__btn-clear">CLEAR</button>
+                <button id="backButton" class="mode__btn-back">&lt;--</button>
             </div>
             <div id="buttons">
                 <div class="numbers">
@@ -33,18 +35,17 @@
                         <button class="numbers-col-button">9</button>
                         <button class="numbers-col-button">6</button>
                         <button class="numbers-col-button">3</button>
-                        <button class="numbers-col-button">=</button>
+                        <button class="numbers-col-button">+/-</button>
                     </div>
                 </div>
                 <div class="operands">
+                    <button class="operands-button">()</button>
                     <button class="operands-button">*</button>
                     <button class="operands-button">/</button>
                     <button class="operands-button">+</button>
                     <button class="operands-button">-</button>
+                    <button class="operands-button">=</button>
                 </div>
-            </div>
-            <div id="mode">
-                <button id="mode-button">CLEAR</button>
             </div>
        </div>
 
